# multimeter

./: .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml  tox.ini
docs/: changelog.md  getting_started.md  user_guide.md
docs/probes/: resource.md
docs/storages/: file.md  influx.md  jsonfile.md
multimeter/: __init__.py  measurement.py  multimeter.py  point.py  probe.py  result.py  storage.py  subject.py  visualization.py
multimeter/storages/: base.py  dummy.py  json.py
multimeter/visualization/grafana/dashboards/: multimeter.json
test/: test_measurement.py  test_multimeter.py  test_point.py  test_result.py  test_storage.py  test_visualization.py
test/test_storage/: test_json.py
