[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "multimeter"
authors = [
    {name = "Christoph Emonds", email = "chris+git@kant.ai"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.6"
dynamic = ['version', 'description']
keywords = [
    "machine learning",
    "process",
    "profile",
    "measure",
    "cpu",
    "memory",
    "io",
    "network",
    "resources",
    "track",
    "metrics",
    "time series",
]
dependencies = [
]

[project.scripts]
mm-visu = "multimeter.visualization:main"

[project.urls]
Documentation = "https://docs.kant.ai/multimeter/latest/"
Source = "https://gitlab.com/kantai/multimeter/"

[project.optional-dependencies]
test = [
    "tox",
]
docs = [
    "tox",
]
release = [
    "flit",
]
influxdb = [
    "influxdb-client",
]
